src/test/deca/codegen/extension/valid/created/printlnx.deca
// Description:
//    teste un appel a printlnx
// Resultats:
//    0x1.0p1

{
    printlnx(2.0);
}