src/test/deca/codegen/extension/invalid/created/ArithmeticExp.deca
// Description:
//    Division par 0
// Resultats:
//    Infinity


{
    print(2.0/0);
}